--- a/src/styles/sass/components/landing/_sponsors.sass
+++ b/src/styles/sass/components/landing/_sponsors.sass
@@ -30,7 +30,7 @@
                         padding: 2rem 2% 2rem 0%
                         margin-left: 2em;
             &.kilo
-                padding: 2rem 2% 2rem 1%
+                padding: 2rem 2% 2rem 2%
                 grid-template-columns: repeat(5, 2fr)
                 grid-template-rows: repeat(2, 2fr)
                 display: flex
